--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -109,7 +109,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["http://192.168.1.20:8086"]
+  urls = ["http://<influxdb-ip>:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
